# Game-Minder

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  engine.py
brain_games/games/: calc.py  even.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-gcd.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/engine/: calc_engine.py  even_engine.py  gcd_engine.py  prime_engine.py
